--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
+    <br>
+    <div class="row">
+        <div class="col-lg-2"> </div>
+        <div class="col-lg-8 bg-warning">
+            <h1 class="text-center text-primary">My Team</h1>
+            <h2 class="text-center text-primary">{{ name }}</h2>
+            <table class="table table-striped table-hover table-info">
+                <tr>
+                    <td>Name</td> <td>{{ name }}</td>
+                </tr>
+                  <tr>
+                    <td>rank</td> <td>{{ rank }}</td>
+                </tr>
+                  <tr>
+                    <td>balance</td> <td>{{ balance }}</td>
+                </tr>
 
-</body>
-</html>
+            </table>
+        </div>
+        <div class="col-lg-2"></div>
+    </div>
+    <br>
+      <div class="text-center">
+    <a class="btn btn-danger" href="/"><i class="text-white fa-solid fa-home"></i>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        </a>
+    </div>
+    </div>
+
+{% endblock %}
